--- a/src/app/auth/login/login.component.html
+++ b/src/app/auth/login/login.component.html
@@ -1,8 +1,12 @@
 <div class="container">
     <h2>Login Form</h2>
     <form method="post" [formGroup]="firstFormGroup">
-      <input type="text" class="form-control" formControlName="Login" name="username" placeholder="Username">
-      <input type="password" class="form-control" formControlName="Password" name="password" placeholder="Password">
-      <input type="submit" (click)="Submit()" class="btn" value="Login">
+        <input type="text" class="form-control" formControlName="Login" name="username" placeholder="Username">
+        <input type="password" class="form-control" formControlName="Password" name="password" placeholder="Password">
+        <input type="submit" (click)="Submit()" class="btn" value="Login1">
+        &nbsp;
+        <input type="submit" (click)="Submit3()" class="btn" value="Check Connection">
+
+
     </form>
-  </div>
+</div>
